--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,6 +4,8 @@ $font-path: "../assets/fonts";
 
 @import "ionic.globals";
 
+//$fa-font-path: "../assets/fonts";
+//@import "font-awesome.css";
 
 // Shared Variables
 // --------------------------------------------------
