--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -26,8 +26,6 @@ page-category{
     position: relative;
     color: red;
     width:40%;
-
-
   }
 
   .thumbnail {
@@ -55,11 +53,11 @@ page-shopping-cart {
 
   .hr {
     display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
+    //margin-top: 0.5em;
+    //margin-bottom: 0.5em;
+    //margin-left: auto;
+    //margin-right: auto;
+    //border-style: inset;
     border-width: 5px;
   }
 
